Ad min widht, fix overlapping widgets and add some padding

--- a/frontend/scripts/react-components/dashboard-element/dashboard-element.scss
+++ b/frontend/scripts/react-components/dashboard-element/dashboard-element.scss
@@ -27,7 +27,7 @@
   }
 
   .dashboard-element-widgets {
-    padding: 0 0 40px;
+    padding: 0 20px 40px;
     background-color: $charcoal-dark;
 
     .dashboard-element-fallback {
